--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-fs": "^2.18.0",
+    "react-native-share": "^7.0.0",
     "react-native-view-pdf": "^0.11.0",
     "react-native-webview": "^11.6.5"
   },
